<resources>
    <string name="app_name">JoyReader</string>
    <string name="title_home">主页</string>
    <string name="title_posting">发布</string>
    <string name="title_my">我的</string>
    <string name="app_chinese_name">悦读</string>
    <string name="hot">热榜</string>
    <string name="latest">最新</string>
    <string name="settings">设置</string>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="logout">切换账号</string>
    <string name="username_hint">请输入用户名</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password_hint">请输入密码</string>
    <string name="hidden_password">******</string>
    <string name="confirm_password_hint">请再次输入密码</string>
    <string name="go_to_register">去注册</string>
</resources>