<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.saoke.joyreader.ui.AvatarView
        android:id="@+id/logo"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginVertical="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="30dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_border"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/register_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/go_to_register"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>